--- a/config/system.yaml
+++ b/config/system.yaml
@@ -1,14 +1,13 @@
-#全局配置
 paths:
-  raw_pdfs: /data/pdfs
-  parsed_text: /data/parsed
-  chunks: /data/chunks
-  embeddings: /data/embeddings
-  faiss_index: /data/indices
+  raw_pdfs: ./data/raw_pdfs
+  parsed_text: ./data/parsed_text
+  chunks: ./data/chunks
+  embeddings: ./data/embeddings
+  faiss_index: ./data/indices
 
 db:
   type: sqlite
-  path: /data/meta.db
+  path: ./data/meta.db
 
 runtime:
-  num_workers: 8
+  num_workers: 2
